# AutoJobApp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  justfile  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: github-actions.yaml
backend/: app.py  auth.py  config.py  exceptions.py  logger.py  utils.py
backend/career_documents/: pdf.py  styling.css  template.html
backend/database/: crud.py  db.py  models.py
backend/database/repositories/: __init__.py  base.py  certificate.py  charity.py  education.py  experience.py  job_board_website.py  job_entry.py  language.py  location.py  programming_language.py  project.py  social_platform.py  tool.py  user.py  user_preferences.py  utils.py
backend/dev/: exporter.py
backend/llm/: llm.py  prompts.py
backend/llm/prompts/: career_documents.yaml  scraping.yaml
backend/routes/: account.py  deps.py  main.py  pages.py  users.py
backend/routes/crud/: charities.py  educations.py  experiences.py  job_entries.py  languages.py  locations.py  programming_languages.py  projects.py  social_platforms.py  tools.py  user_preferences.py  users.py  websites.py
backend/schemas/: endpoints.py  llm_responses.py  models.py
backend/scrapers/: __init__.py  base_scraper.py  llm_scraper.py  llm_scraper_v2.py  page_actions.py  page_processing.py  tools.py  utils.py
backend/scrapers/tests/: test_llm_scraper.py  test_utils.py
backend/static/: base.css
backend/static/js/: requests.js
backend/templates/: account.html  base.html  index.html  login.html  manage_users.html  register.html
docs/: todo.md
frontend/: app.config.ts  package.json  tsconfig.json
frontend/api/: api.ts  api.yaml  client.ts
frontend/src/: app.css  app.tsx
frontend/src/components/: NavBar.tsx
frontend/src/routes/: index.tsx
scripts/: buildfrontend.sh  dev.sh
tests/: test_automation_steps.py  test_llm_scraper.py  test_utils.py
