[project]
name = "AutoJobApp"
authors = [
    { name = "Dawid Stasiński", email = "dawidstasinski12@gmail.com" },
]
version = "0.1.0"
description = "AI agents that look for adequate jobs and create tailored CVs and cover letters. Fully automated — no more manual effort"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [

]
classifiers = [

]
requires-python = ">=3.12"

dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.13.5",
    "devtools>=0.12.2",
    "fastapi[standard]>=0.115.12",
    "loguru>=0.7.3",
    "patchright>=1.57.2",
    "playwright>=1.51.0",
    "playwright-stealth>=2.0.0",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.11.3",
    "pydantic-ai-slim>=1.44.0",
    "python-toon>=0.1.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "pytest-playwright>=0.7.0",
    "ruff>=0.11.7",
]

[project.urls]
repository = "https://github.com/Korbielowski/AutoJobApp"

[project.optional-dependencies]
# Grok (x.AI) works with both openai and anthropic models.
# According to this github issue: https://github.com/pydantic/pydantic-ai/issues/261
openai = [
    "pydantic-ai-slim[openai]>=1.44.0",
]
vertexai = [
    "pydantic-ai-slim[vertexai]>=1.44.0",
]
google = [
    "pydantic-ai-slim[google]>=1.44.0",
]
anthropic = [
    "pydantic-ai-slim[anthropic]>=1.44.0",
]
groq = [
    "pydantic-ai-slim[groq]>=1.44.0",
]
mistral = [
    "pydantic-ai-slim[mistral]>=1.44.0",
]
huggingface = [
    "pydantic-ai-slim[huggingface]>=1.44.0",
]
outlines-llamacpp = [
    "pydantic-ai-slim[outlines-llamacpp]>=1.44.0",
]
outlines-vllm-offline = [
    "pydantic-ai-slim[outlines-vllm-offline]>=1.44.0",
]

#[project.scripts]
#autojobapp-cli = "backend.app"

[tool.setuptools.packages.find]
exclude = ["branding*"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
